Fix alignment in Former Members section

--- a/app/assets/stylesheets/members.scss
+++ b/app/assets/stylesheets/members.scss
@@ -111,10 +111,6 @@ input[type='file'].entry {
   margin-bottom: 30px;
 }
 
-.former_member * {
-    vertical-align: middle;
-}
-
 .former_member {
   font-size: 18px;
   margin-bottom: 5px;
